tests/machine/x/go/cross_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cross_join.go:10:18: undefined: CustomersItem
../../../tests/machine/x/go/cross_join.go:13:5: undefined: CustomersItem
../../../tests/machine/x/go/cross_join.go:16:5: undefined: CustomersItem
../../../tests/machine/x/go/cross_join.go:21:15: undefined: OrdersItem
../../../tests/machine/x/go/cross_join.go:25:5: undefined: OrdersItem
../../../tests/machine/x/go/cross_join.go:29:5: undefined: OrdersItem
../../../tests/machine/x/go/cross_join.go:34:15: undefined: Result
../../../tests/machine/x/go/cross_join.go:35:16: undefined: Result
../../../tests/machine/x/go/cross_join.go:38:31: undefined: Result

1: //go:build ignore
